--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,17 @@ body {
 }
 
 .nav-tabs .nav-link {
- background-color: rgb(107, 162, 207) !important;
+  background-color: rgb(107, 162, 207) !important;
   color: white !important;
-  }
-  
-  .nav-tabs .nav-link.active {
-   background-color: whitesmoke !important;
-   color: black !important;
-  }
-  
+}
+
+.nav-tabs .nav-link.active {
+  background-color: whitesmoke !important;
+  color: black !important;
+}
+
 li.nav-item {
-margin-left: 5px !important;
+  margin-left: 5px !important;
 }
 
 a {
@@ -138,7 +138,7 @@ a {
 
 .content {
   height: 85vh;
-  padding: 10px;
+  padding: 5px;
   /* overflow-y: scroll; */
 }
 
@@ -187,12 +187,12 @@ a {
   } */
 
 .table-striped tbody tr:nth-of-type(even) {
-background-color: #e2e0e0 ;
-  }
-  
+  background-color: #e2e0e0;
+}
+
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color:#ffffff ;
-  }
+  background-color: #ffffff;
+}
 
 /* width for buttons  */
 
@@ -200,8 +200,6 @@ background-color: #e2e0e0 ;
   display: flex;
   gap: 22px;
 }
-
-
 
 .form__field {
   font-family: inherit;
@@ -223,16 +221,12 @@ background-color: #e2e0e0 ;
   transition: 0.2s;
   font-size: 1rem;
   color: gray;
-
- 
 }
 
 .form-label {
-
   font-size: 16px;
 
   font-weight: 700;
-
 }
 
 .form__field:focus,
@@ -246,10 +240,10 @@ background-color: #e2e0e0 ;
 }
 
 /* .submenu_links { */
-  /* border: 1px solid black; */
-  /* display: flex; */
-  /* margin-left: 30px; */
-  /* gap: 10px;
+/* border: 1px solid black; */
+/* display: flex; */
+/* margin-left: 30px; */
+/* gap: 10px;
   text-decoration: none;
 } */
 
@@ -350,7 +344,6 @@ label {
   /* border-radius: 10px; */
 }
 
-
 .css-63vwl1-MuiTypography-root-MuiBreadcrumbs-root {
   font-size: 1.3rem !important;
 }
@@ -365,20 +358,20 @@ label {
   padding-left: -2px;
   border-right: 4px solid transparent;
   transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045); */
-  /* align-items: center; */
-  /* justify-content: space-around; */
-  /* border: 1px solid black; */
+/* align-items: center; */
+/* justify-content: space-around; */
+/* border: 1px solid black; */
 /* } */
 /* .submenu_link:hover { */
-  /* border-right: 4px solid #000000; */
-  /* transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+/* border-right: 4px solid #000000; */
+/* transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   background-color: #495579;
   text-decoration: none;
   width: 100%;
 } */
 
 .css-4pdmu4-MuiBreadcrumbs-ol {
-  margin-top: 18px !important;
+  margin-top: 5px !important;
   font-size: 16px !important;
 }
 
@@ -398,9 +391,7 @@ td {
   font-size: 14px;
 }
 
-
 .title {
-
   text-align: center;
 
   height: 34px;
@@ -410,8 +401,7 @@ td {
   background-color: #2b3a55;
 
   border-radius: 10px 10px 0px 0px;
-
-  }
+}
 .title_name {
   color: #ffffff;
   font-size: 1rem;
@@ -601,4 +591,39 @@ input::-webkit-inner-spin-button {
 
 li.nav-item {
   margin-left: 5px !important;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 20px 0;
+}
+
+.pagination li {
+  margin: 0 5px;
+  display: inline;
+  font-size: 12px;
+}
+
+.pagination li a {
+  padding: 3px 7px;
+  border: 1px solid #ccc;
+  background-color: #fff;
+  color: #333;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.pagination li a:hover {
+  background-color: #2b3a55;
+  color: #fff !important;
+}
+
+.pagination li.active a {
+  background-color: #2b3a55;
+  color: #fff;
 }
